Add authentication implementation

--- a/.env
+++ b/.env
@@ -30,3 +30,5 @@ APP_SECRET=eba1b98d27a68d8b73a6d96d531f3bb8
 DATABASE_URL="mysql://root:root@127.0.0.1:8889/lebawbaw?serverVersion=5.7"
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+#MAILER_DSN=smtp://user:pass@smtp.example.com:25
+MAILER_DSN=sendmail://default
