--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,15 +1,46 @@
 security:
+    #enable_authenticator_manager: true
+
+    encoders:
+        App\Entity\User:
+            algorithm: auto
+
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        users_in_memory: { memory: null }
+        my_db_provider:
+            entity:
+                class: App\Entity\User
+                property: email
+        #users_in_memory: { memory: null }
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
+        # main:
+        #     #anonymous: true
+
         main:
+            # anonymous: true
+            # lazy: true
+
+            # configure the maximum login attempts (per minute)
+            # login_throttling:
+            #     max_attempts: 3
+
             anonymous: true
-            lazy: true
-            provider: users_in_memory
+            provider: my_db_provider
+            guard:
+                authenticators:
+                    - App\Security\AppLeBawbawAuthenticator
+            logout:
+                path: /logout
+                # where to redirect after logout
+                target: /
+
+            # role_hierarchy:
+            #     ROLE_ADMIN:       ROLE_USER
+            #     ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]   
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -20,5 +51,6 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin, roles: ROLE_USER }
         # - { path: ^/profile, roles: ROLE_USER }
