Implement registration functionality

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -29,6 +29,7 @@ security:
             #     max_attempts: 3
 
             anonymous: true
+            lazy: true
             provider: my_db_provider
             guard:
                 authenticators:
